--- a/style.css
+++ b/style.css
@@ -4009,3 +4009,16 @@ body.hacker-mode .matrix-canvas {
 
 
 
+
+/* --- 5. Custom Text Selection --- */
+::selection {
+  background: #00ced1;
+  color: #000;
+  text-shadow: none;
+}
+::-moz-selection {
+  background: #00ced1;
+  color: #000;
+  text-shadow: none;
+}
+
